Fixed title vertical alignment

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,6 @@ h1, h2 ,h3 ,h4 ,h5 ,h6 {
 
 #name-section .col {
   left:50%;
-  top:50%;
   transform: translate3d(-50%, -50%, 0);
 }
 
